prevent zoom on mobile #2

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ html,
 body {
     position: fixed;
     overflow: hidden;
+    touch-action: none;
 }
 
 body {
